--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --mode development",
     "start": "webpack serve --open",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development "
+    "build": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
